--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -700,7 +700,7 @@ body .narrow-mainborder {
 
 /**************** footer ****************/
 .footer {
-	margin-top: 1em;
+	margin:1em auto 0 auto;
 	text-align:center;
 }
 
@@ -869,8 +869,8 @@ body .narrow-mainborder {
 	body .mainborder {
 		border-width:0 0 1px 0;
 		margin-top:0;
-		padding-left: 0;
-		padding-right: 0;
+		padding-left: 1px;
+		padding-right: 1px;
 	}
 	body .region:first-child {
 		margin-top: 0;
