--- a/asset/css/lightblue/adminstyle.css
+++ b/asset/css/lightblue/adminstyle.css
@@ -1,17 +1,12 @@
-.flex-box ul,
-.flex-box li {
-	border-color:#80a8ff;
-}
-
 .flex-box a {
 	border-color:#ccc;
 }
 .flex-box a:hover {
 	border-color:#80a8ff;
-	background-color:#f6f8fb;
+	background:#f6f8fb;
 }
 
 
 .detail-item {
-	border-color:#80a8ff;
+	border-color:#b5ccff;
 }
