--- a/asset/css/darkblue/adminstyle.css
+++ b/asset/css/darkblue/adminstyle.css
@@ -1,17 +1,12 @@
-.flex-box ul,
-.flex-box li {
-	border-color:#0080b0;
-}
-
 .flex-box a {
-	border-color:#ccc;
+	border-color:#b2ccd6;
 }
 .flex-box a:hover {
 	border-color:#0080b0;
-	background-color:#f7f7f7;
+	background:#f7f7f7;
 }
 
 
 .detail-item {
-	border-color:#0080b0;
+	border-color:#4cb2d9;
 }
