--- a/asset/css/default/adminstyle.css
+++ b/asset/css/default/adminstyle.css
@@ -1,17 +1,11 @@
-.flex-box ul,
-.flex-box li {
-	border-color:#80a8ff;
-}
-
 .flex-box a {
 	border-color:#ccc;
 }
 .flex-box a:hover {
 	border-color:#80a8ff;
-	background-color:#f6f6f6;
+	background:#f6f6f6;
 }
 
-
 .detail-item {
-	border-color:#80a8ff;
+	border-color:#b6ccfc;
 }
