--- a/asset/css/festival/adminstyle.css
+++ b/asset/css/festival/adminstyle.css
@@ -1,17 +1,13 @@
-.flex-box ul,
-.flex-box li {
-	border-color:#fff200;
-}
-
 .flex-box a {
-	border-color:#ccc;
+	border-color:#cebd5d;
 }
 .flex-box a:hover {
 	border-color:#fff200;
-	background-color:#c00000;
+	background:#c00000;
 }
 
 
 .detail-item {
-	border-color:#fff200;
+	border-color:#e3c629;
+	box-shadow: 0 0 20px rgba(100,100,100,0.5);
 }
