--- a/asset/css/lightgreen/adminstyle.css
+++ b/asset/css/lightgreen/adminstyle.css
@@ -1,17 +1,12 @@
-.flex-box ul,
-.flex-box li {
-	border-color:#56c556;
-}
-
 .flex-box a {
-	border-color:#ccc;
+	border-color:#b2dfb2;
 }
 .flex-box a:hover {
 	border-color:#56c556;
-	background-color:#f6fff6;
+	background:#f6fff6;
 }
 
 
 .detail-item {
-	border-color:#56c556;
+	border-color:#94ca94;
 }
