--- a/asset/css/silver/style.css
+++ b/asset/css/silver/style.css
@@ -1,23 +1,17 @@
 body {
-	color: #000;
-	background-color: #efeff7;
-	background-image: url(../../image/bg_grey.gif);
-}
-
-a {
-	color: #000;
+	background: #efeff7 url(../../image/bg_silver.gif);
 }
 
 textarea, input, select {
-	border-color: #aea8bf;
-	color: #000;
-	background-color: #fff;
+	border-color: #c0bad2;
+	outline-color:#9c8fc1;
+	background: #fff;
 }
 
 .header {
-	color: #000;
-	background-color: #fff;
-	background-image: url(../../image/bar_top_grey.gif);
+	border-color:#c0bad2;
+	background: #d6d3e9;
+	box-shadow:0 0 3px #c0bad2;
 }
 
 .guest-functions .aside .function {
@@ -25,41 +19,35 @@ textarea, input, select {
 }
 
 .topic {
-	border-color: #aea8bf;
-	background-color: #e7e3ef;
+	border-color: #c0bad2;
+	background: #e7e3ef;
 }
 
 .topic .message {
-	border-color: #aea8bf;
-	color: #000;
+	border-color: #c0bad2;
 }
 
 .topic .info {
-	color: #000;
-	border-color: #aea8bf;
-	background-color: #e7e3ef;
-	background-image: none;
+	border-color: #c0bad2;
+	background: #e7e3ef;
 }
 
 .topic .detail {
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .topic .title {
-	border-color: #aea8bf;
-	color: #000;
-	background-color: #bdbece;
-	background-image: url(../../image/bar_grey.gif);
+	border-color: #c0bad2;
+	background: #d6d3e9;
 }
 
 .topic .inner-message {
-	border-color: #aea8bf;
-	background-color: #f3f1f7;
+	border-color: #c0bad2;
+	background: #f3f1f7;
 }
 
 .topic .inner-message .summary {
-	color: #000;
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .topic .admin-message .title,
@@ -72,16 +60,16 @@ textarea, input, select {
 }
 
 .topic .outer-hint {
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .topic .admin-message-tools {
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .topic-list {
-	border-color: #aea8bf;
-	background-color: #e7e3ef;
+	border-color: #c0bad2;
+	background: #e7e3ef;
 }
 
 .topic-list tbody tr:hover td {
@@ -90,35 +78,30 @@ textarea, input, select {
 
 .topic-list th,
 .topic-list td {
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .topic-list th {
-	color: #000;
-	background-color: #bdbece;
-	background-image: url(../../image/bar_grey.gif);
+	background:#d6d3e9;
 }
 
 .region {
-	border-color: #aea8bf;
-	color: #000;
-	background-color: #e7e3ef;
+	border-color: #c0bad2;
+	background: #e7e3ef;
 }
 
 .region .title {
-	border-color: #aea8bf;
-	color: #000;
-	background-color: #bdbece;
-	background-image: url(../../image/bar_grey.gif);
+	border-color: #c0bad2;
+	background: #d6d3e9;
 }
 
 .region .content table {
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .region .content table th,
 .region .content table td {
-	border-color: #aea8bf;
+	border-color: #c0bad2;
 }
 
 .page-list .nav a {
@@ -127,7 +110,7 @@ textarea, input, select {
 
 .page-list .nav a:hover {
 	border-color: #aea8bf;
-	background-color: #f3f1f7;
+	background: #f3f1f7;
 }
 
 .page-list .pagenum,
@@ -136,12 +119,11 @@ textarea, input, select {
 .page-list .pagenum:active,
 .page-list .pagenum:hover {
 	border-color: #e7e3ef;
-	color: #000;
 }
 
 .page-list .pagenum:hover {
 	border-color: #aea8bf;
-	background-color: #f3f1f7;
+	background: #f3f1f7;
 }
 
 .page-list .pagenum-current,
@@ -169,7 +151,7 @@ textarea, input, select {
 .tab-outer-container .tab-title-selected {
 	border-color: #aea8bf;
 	border-bottom-color: transparent;
-	background-color: #e7e3ef;
+	background: #e7e3ef;
 }
 
 * html .tab-outer-container .tab-title-selected {
@@ -189,5 +171,5 @@ textarea, input, select {
 .ubbtoolbar .ubbbutton:hover,
 .ubbtoolbar .ubbface:hover {
 	border-color: #aea8bf;
-	background-color: #f3f1f7;
+	background: #f3f1f7;
 }
