--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -184,6 +184,25 @@ form .row {
 	zoom:1;
 }
 
+.header .banner {
+	display: block;
+	margin-bottom:5px;
+	max-width:100%;
+	height: auto;
+}
+
+.header .banner img {
+	display: block;
+	margin:0 auto;
+	width: 100%;
+	height:auto;
+}
+
+.header .header-container {
+	margin:5px auto;
+	overflow: hidden;
+}
+
 .header .logo {
 	display:inline-block;
 	vertical-align: middle;
@@ -195,19 +214,17 @@ form .row {
 *+html .header .logo {
 	display: inline;
 }
-
-.header .banner {
+.header .logo img {
 	display: block;
-	margin:0 auto 5px auto;
-	max-width:100%;
-	height: auto;
+	max-width: 100%;
+	height:auto;
 }
 
 .header .breadcrumb {
 	display: inline-block;
 	vertical-align: middle;
-	margin:5px;
 	font-size: 1.25em;
+	margin:5px;
 }
 *html .header .breadcrumb {
 	display: inline;
