--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -299,6 +299,7 @@ body .narrow-mainborder {
 }
 
 .topic .icons .icon {
+	display: -moz-inline-stack;
 	display: inline-block;
 	vertical-align: bottom;
 	margin:0 2px;
@@ -775,6 +776,7 @@ body .narrow-mainborder {
 }
 
 .tab-outer-container .tab-title {
+	display: -moz-inline-stack;
 	display: inline-block;
 	position: relative;
 	bottom: -1px;
