admin page: make auditting words' link gray

--- a/asset/css/adminstyle.css
+++ b/asset/css/adminstyle.css
@@ -45,7 +45,8 @@
 
 .auditting-message .title,
 .auditting-message .title a,
-.auditting-message .words {
+.auditting-message .words,
+.auditting-message .words a {
 	color:#777;
 }
 
