--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -341,7 +341,8 @@ body .narrow-mainborder {
 	float: left;
 	border-right:1px solid;
 	margin-right:-1px;
-	transition: width 200ms ease;
+	word-wrap:break-word;
+	transition: width 100ms ease;
 }
 *html .topic .info {
 	margin-right: -4px;
